# opic-automatic-grader

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
api/: auth.py  deps.py
config/: database.py  settings.py
models/: database.py  ml_models.py  schemas.py
repositories/: answer_repo.py  base.py  grade_repo.py  question_repo.py  survey_repo.py
services/: audio_service.py  feedback_service.py  scoring_service.py  survey_service.py
static/: feedback_page.css  login.css  processing_score_page.js  question_page.css  question_page.js  show_score_page.css  start_page.css  survey_page.css
templates/: feedback_page.html  login.html  processing_score_page.html  question_page.html  show_score_page.html  start_page.html  survey_page.html
